Implementação da funcionalidade dinâmica

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style-cadastro.css">
 </head>
+
 <body>
     <header>
         <div class="cabecalho">
@@ -74,6 +76,13 @@
             </div>
         </div>
 
+        <div class="linha_5">
+            <div class="tempo_preparo">
+                <p>Tempo de preparo</p>
+                <input type="text" id="cadastroTempoPreparo">
+            </div>
+        </div>
+
         <button type="button" class="btn btn-success" id="botaoInserir">Inserir</button>
         <button type="button" class="btn btn-secondary" id="botaoAlterar">Alterar</button>
         <button type="button" class="btn btn-danger" id="botaoDelete">Excluir</button>
@@ -85,75 +94,9 @@
     <div class="mostarPratos" id="resultadoPesquisa"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous">
-    </script>
-    <script>
-        document.getElementById('botaoMostrar').addEventListener('click', handleMostrar)
-        function handleMostrar(){
-            readPratos((dados) => {
-                const resultado = document.getElementById('resultadoPesquisa')
-                resultado.style.display = 'block'
-                resultado.innerHTML = '<h3>Pratos cadastrados: </h3>'
-                dados.forEach(p => {
-                    resultado.innerHTML += `<p><strong>ID:</strong> ${p.id} | <strong>Título:</strong> ${p.titulo}</p>`
-                })
-            })
-        }
-
-        document.getElementById('botaoInserir').addEventListener('click', handleInserir)
-        function handleInserir(){
-            const prato = {
-                id: document.getElementById('cadastroID').value,
-                titulo: document.getElementById('cadastroTitulo').value,
-                descricao: document.getElementById('cadastroDescricao').value,
-                ingredientes: document.getElementById('cadastroIngredientes').value.split(',').map(i => i.trim()),
-                categoria: document.getElementById('cadastroCategoria').value,
-                autor: document.getElementById('cadastroAutor').value,
-                data: document.getElementById('cadastroData').value,
-                imagem: 'assets/imagens/default.jpg'
-            }
-            criarPrato(prato)
-        }
-
-        document.getElementById('botaoAlterar').addEventListener('click', handleAlterar)
-        function handleAlterar(){
-            const id = document.getElementById('cadastroID').value
-            const prato = {
-                id: document.getElementById('cadastroID').value,
-                titulo: document.getElementById('cadastroTitulo').value,
-                descricao: document.getElementById('cadastroDescricao').value,
-                ingredientes: document.getElementById('cadastroIngredientes').value.split(',').map(i => i.trim()),
-                categoria: document.getElementById('cadastroCategoria').value,
-                autor: document.getElementById('cadastroAutor').value,
-                data: document.getElementById('cadastroData').value,
-                imagem: 'assets/imagens/default.jpg'
-            }
-            updatePrato(id, prato)
-        }
-
-        document.getElementById('botaoDelete').addEventListener('click', handleExcluir)
-        function handleExcluir(){
-            const id = document.getElementById('cadastroID').value
-            if(!id){
-                displayMessage("Informe o ID para excluir")
-                return
-            }
-            deletePrato(id)
-        }
-
-        document.getElementById('botaoLimpar').addEventListener('click', limparFormulario)
-        function limparFormulario() {
-            document.getElementById('cadastroID').value = ''
-            document.getElementById('cadastroTitulo').value = ''
-            document.getElementById('cadastroDescricao').value = ''
-            document.getElementById('cadastroIngredientes').value = ''
-            document.getElementById('cadastroCategoria').value = ''
-            document.getElementById('cadastroAutor').value = ''
-            document.getElementById('cadastroData').value = ''
-            document.getElementById('imagem').value = ''
-        }
-    </script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
     <script src="assets/scripts/app.js" defer></script>
 </body>
+
 </html>
