--- a/public/index.html
+++ b/public/index.html
@@ -219,6 +219,12 @@
         </a>
     </div>
 
+    <div class="div_graficos">
+        <a href="graficos.html">
+            <button class="botao_grafico">Gráficos</button>
+        </a>
+    </div>
+    
     <footer>
         <p>&copy; 2025 Chef em Casa. Todos os direitos reservados.</p>
         <p>&copy; PUC Minas</p>
